Wait for DOM to be loaded before trying to render directory listing

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       }
     </style>
     <script>
+      document.addEventListener('DOMContentLoaded', () => {
       (async () => {
         const response = await fetch({
           method: 'GET',
@@ -45,6 +46,7 @@
         html += '</ul>';
         document.getElementById('reports-list').innerHTML = html;
       })()
+    });
     </script>
   </head>
   <body>
