--- a/index.html
+++ b/index.html
@@ -26,29 +26,34 @@
     <script>
       document.addEventListener('DOMContentLoaded', () => {
       (async () => {
-        const res = await fetch({
-          method: 'GET',
-          url: 'https://api.github.com/repos/teloro/marshall-spirits-tests/contents/',
-          headers: {
-            'Content-Type': 'application/json',
-            'X-GitHub-Api-Version': '2022-11-28',
-          },
-        });
-        if (!res.ok) {
+        try {
+          const res = await fetch({
+            method: 'GET',
+            url: 'https://api.github.com/repos/teloro/marshall-spirits-tests/contents/',
+            headers: {
+              'Content-Type': 'application/json',
+              'X-GitHub-Api-Version': '2022-11-28',
+            },
+          });
+          if (!res.ok) {
             console.error('Failed to fetch data:', response.status, response.statusText);
             return;
           }
-        const data = await res.json();
-        let html = '<ul>';
-        
-        for (let item of data) {
-          if (item.type === 'dir') {
-            html += `<li><a href="${item.path}">${item.name}</a></li>`;
+          const data = await res.json();
+          let html = '<ul>';
+          
+          for (let item of data) {
+            if (item.type === 'dir') {
+              html += `<li><a href="${item.path}">${item.name}</a></li>`;
+            }
           }
-        }
+  
+          html += '</ul>';
+          document.getElementById('reports-list').innerHTML = html;
 
-        html += '</ul>';
-        document.getElementById('reports-list').innerHTML = html;
+        } catch (e) {
+          console.error(e);
+        }
       })()
     });
     </script>
