--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             },
           });
           if (!res.ok) {
-            throw new Error(`Response status: ${response.status}`);
+            throw new Error(`Response status: ${res.status}`);
           }
           const json = await res.json();
           let html = '<ul>';
